Added validation while adding delivery

--- a/src/main/resources/messages_it.properties
+++ b/src/main/resources/messages_it.properties
@@ -1,2 +1,3 @@
 NotNull=Il campo {0} non pu\u00F2 essere nullo.
+NotBlank=Il campo {0} non può essere vuoto.
 Size=Contenuto troppo lungo del campo {0}: non pu\u00F2 superare i {1} caratteri.
