--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 NotNull=Field {0} cannot be null.
+NotBlank=Field {0} cannot be blank.
 Size=Too long content of the field {0} - it cannot exceed {1} characters.
