Changed adding delivery service: no redirect to success/error pages
- Add modals for add delivery success and validation error when add delivery
- Add Tomcat configuration for UTF-8 (for polish letters when messages.properties used)

--- a/src/main/resources/messages_pl.properties
+++ b/src/main/resources/messages_pl.properties
@@ -1,3 +1,3 @@
 NotNull=Pole {0} nie mo\u017Ce by\u0107 nullem.
-NotBlank=Pole {0} nie mo?e by? puste.
+NotBlank=Pole {0} nie mo\u017Ce by\u0107 puste.
 Size=Zbyt d\u0142uga zawarto\u015B\u0107 pola {0}. D\u0142ugo\u015B\u0107 zawarto\u015Bci nie mo\u017Ce przekracza\u0107 {1} znak\u00F3w.
